--- a/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/CommonApp.mxml
+++ b/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/CommonApp.mxml
@@ -37,11 +37,12 @@
             <mx:MenuBar id="commonMenuBar" labelField="@label">
                 <mx:XMLList>
                     <menuitem label="Stock Configuration" targetPos="2">
-                        <menuitem label="Transport Units" action="{CommonSwitchScreenEvent.SHOW_TRANSPORTUNIT_VIEW}" />
                         <menuitem label="Transport Unit Types" action="{CommonSwitchScreenEvent.SHOW_TRANSPORTUNITTYPE_VIEW}" />
+                        <menuitem label="Transport Units" action="{CommonSwitchScreenEvent.SHOW_TRANSPORTUNIT_VIEW}" />
+                        <menuitem label="Location Types" action="{CommonSwitchScreenEvent.SHOW_LOCATIONTYPE_VIEW}" />
                         <menuitem label="Locations" action="{SwitchScreenEvent.SHOW_LOCATION_VIEW}" />
-                        <menuitem label="Users" action="{SwitchScreenEvent.SHOW_USER_MGMT_VIEW}" />
                         <menuitem label="Location Groups" action="{SwitchScreenEvent.SHOW_LOCATIONGROUP_VIEW}" />
+                        <menuitem label="Users" action="{SwitchScreenEvent.SHOW_USER_MGMT_VIEW}" />
                     </menuitem>
                 </mx:XMLList>
             </mx:MenuBar>
@@ -49,6 +50,7 @@
         <mx:HBox width="100%" height="100%" horizontalAlign="center" verticalAlign="middle">
             <mx:ViewStack id="commonViewStack" selectedIndex="{ModelLocator.getInstance().mainViewStackIndex}">
                 <view:LocationView name="locationView" />
+                <view:LocationTypeView name="locationTypeView" />
                 <view:LocationGroupView name="locationGroupView" />
                 <view:TransportUnitView name="transportUnitView" />
                 <view:TransportUnitTypeView name="transportUnitTypeView" />
