--- a/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/LocationView.mxml
+++ b/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/LocationView.mxml
@@ -78,53 +78,17 @@
 						}
 					]]>
 	</mx:Script>
-	<o:SuperPanel x="12" y="10" width="744" height="250" layout="absolute" title="Location Details" id="locationDetailsPnl"
-		showControls="true" enableResize="true">
-		<mx:Label text="Description:" y="48" x="10" />
-		<mx:Label x="10" y="12" text="Location:" />
-		<mx:Text x="139" y="12"
-			text="{selectedRow.locationId.area}/{selectedRow.locationId.aisle}/{selectedRow.locationId.x}/{selectedRow.locationId.y}/{selectedRow.locationId.z}"
-			width="241" />
-		<mx:TextArea x="139" y="47" text="{selectedRow.description}" width="289" />
-		<mx:Label x="436" y="12" text="Location Group:" />
-		<mx:ComboBox x="554" y="10" id="locationGroupCB" dataProvider="{getListAsComboBoxList(modelLocator.allLocationGroups)}" />
-		<mx:CheckBox x="10" y="91" label="Counting Active" selected="{selectedRow.countingActive}" />
-		<mx:CheckBox x="10" y="121" label="Incoming Active" selected="{selectedRow.incomingActive}" />
-		<mx:CheckBox x="10" y="151" label="Outgoing Active" selected="{selectedRow.outgoingActive}" />
-		<mx:CheckBox x="10" y="181" label="Considered in Allocation" selected="{selectedRow.consideredInAllocation}" />
-		<mx:CheckBox x="436" y="46" label="Location Group Counting Active" selected="{selectedRow.locationGroupCountingActive}" />
-		<mx:Label x="436" y="93" text="Location Type:" />
-		<mx:Label x="177" y="93" text="Maximum Weight:" />
-		<mx:Label x="177" y="123" text="Number of Max. Transport Units:" />
-		<mx:Label x="436" y="123" text="Messages:" />
-		<mx:Label x="301" y="182" text="PLC State:" />
-		<mx:Label x="177" y="182" text="Check State:" />
-		<mx:TextArea x="436" y="149" width="278" height="51" />
-		<mx:HSlider x="177" y="149" value="{selectedRow.noMaxTransportUnits}" maximum="10" snapInterval="1" />
-		<mx:Text x="293" y="93" text="{selectedRow.maximumWeight}" />
-		<mx:Text x="263" y="182" text="{selectedRow.checkState}" />
-		<mx:Text x="373" y="182" text="{selectedRow.plcState}" />
-		<mx:Text x="531" y="93" text="{selectedRow.locationType.description}" width="183" />
-	</o:SuperPanel>
-	<o:SuperPanel width="250" height="250" layout="absolute" x="1020" y="10" title="No of Transports"
-		showControls="true" enableResize="true">
-		<!--
-			<mx:ColumnChart x="0" y="0" id="columnchart1" horizontalAxisRatio=".33" verticalAxisRatio=".99" height="100%"
-			width="100%" dataProvider="{selectedRow.noMaxTransportUnits}"> <mx:series> <mx:ColumnSeries displayName="Series 1"/>
-			</mx:series> <mx:horizontalAxis> <mx:CategoryAxis dataProvider="{selectedRow.noMaxTransportUnits}"
-			categoryField="Number"/> </mx:horizontalAxis> </mx:ColumnChart>
-		-->
-	</o:SuperPanel>
-	<o:SuperPanel width="250" height="250" layout="absolute" x="762" y="10" title="Fill Level" showControls="true"
-		enableResize="true">
-		<!--
-			<mx:PieChart x="0" y="0" id="piechart1" width="210" height="200"> <mx:series> <mx:PieSeries displayName="Series 1"
-			field=""/> </mx:series> </mx:PieChart>
-		-->
-	</o:SuperPanel>
-	<mx:Canvas x="10" y="268" width="100%" height="100%">
-		<mx:DataGrid id="locationsList" allowMultipleSelection="true" sortableColumns="true" width="100%"
-			dataProvider="{modelLocator.allLocations}" itemClick="onRowClick(event)" height="100%">
+	<mx:HBox x="10" y="10" verticalAlign="middle" backgroundColor="#C6FFC7" width="95%">
+	    <mx:Label x="10" y="10" text="Locations" fontSize="24"/>
+	    <mx:VRule height="10"/>
+	    <mx:Button id="addLocationTypeBtn" buttonMode="true" mouseChildren="false" toolTip="Create a new Location Type" icon="@Embed(source='/assets/images/Location--Add.png')" />
+	    <mx:VRule height="10"/>
+	    <mx:Button id="removeLocationTypeBtn" buttonMode="true" mouseChildren="false" toolTip="Delete an existing Location Type" icon="@Embed(source='/assets/images/Location--Delete.png')" />
+	</mx:HBox>
+	<mx:HRule x="9" y="53" width="95%"/>
+	<mx:HBox height="100%" width="95%" x="10" y="63">
+		<mx:DataGrid id="locationsList" allowMultipleSelection="true" sortableColumns="true" height="100%" width="100%"
+			dataProvider="{modelLocator.allLocations}" itemClick="onRowClick(event)" >
 			<mx:columns>
 				<mx:DataGridColumn dataField="area" labelFunction="locationIdField" editable="false" width="50">
 					<mx:headerRenderer>
@@ -168,5 +132,45 @@
 				<mx:DataGridColumn headerText="Last Access" dataField="lastAccess" editable="false" />
 			</mx:columns>
 		</mx:DataGrid>
-	</mx:Canvas>
+    <mx:Canvas id="locationDetailsPnl" x="618" y="63" backgroundColor="#C6FFC7">
+    
+        <mx:Label text="Location" fontWeight="bold" width="130" textAlign="right" x="10" y="12"/>
+        <mx:Text text="{selectedRow.locationId}" width="100%" fontWeight="bold"  x="148" y="12"/>
+
+        <mx:Label text="Description" width="130" textAlign="right" x="10" y="38"/>
+        <mx:TextArea text="{selectedRow.description}" width="200" height="64" x="148" y="37"/>
+        <mx:HRule x="10" y="109" width="360"/>
+
+        <mx:Label text="Location Group" width="130" textAlign="right" x="10" y="119" />
+        <mx:ComboBox id="locationGroupCB" dataProvider="{getListAsComboBoxList(modelLocator.allLocationGroups)}" width="200"  x="148" y="117"/>
+        <mx:CheckBox x="148" y="147" label="Counting Active in Location Group" selected="{selectedRow.locationGroupCountingActive}" />
+        <mx:HRule x="10" y="177" width="360"/>
+        
+        <mx:Label text="Location Type" width="130" textAlign="right" x="10" y="187" />
+        <mx:ComboBox id="locationTypeCmb" dataProvider="{getListAsComboBoxList(modelLocator.allLocationGroups)}" width="200" x="148" y="185"/>
+        <mx:Text x="148" y="217" text="{selectedRow.locationType.description}" width="200" />
+        <mx:HRule x="10" y="253" width="360"/>
+        
+        <mx:Label text="Max. Transport Units" width="130" textAlign="right" x="10" y="263" />
+        <mx:TextInput id="noMaxTransportUnitsTxt" text="{selectedRow.noMaxTransportUnits}" width="40"  x="148" y="261"/>
+
+        <mx:Label text="Check State" width="130" textAlign="right" x="10" y="289" />
+        <mx:Text id="checkStateTxt" text="{selectedRow.checkState}" width="200" x="148" y="289"/>
+
+        <mx:Label text="PLC State" width="130" textAlign="right" x="10" y="315" />
+        <mx:TextInput id="plcStateTxt" text="{selectedRow.plcState}"  width="40" x="148" y="313"/>
+
+        <mx:CheckBox x="148" y="343" label="Counting Active" selected="{selectedRow.countingActive}" />
+        <mx:CheckBox x="148" y="373" label="Incoming Active" selected="{selectedRow.incomingActive}" />
+        <mx:CheckBox x="148" y="403" label="Outgoing Active" selected="{selectedRow.outgoingActive}" />
+        <mx:CheckBox x="148" y="433" label="Considered in Allocation" selected="{selectedRow.consideredInAllocation}" />
+        
+        <mx:Label x="72" y="463" text="Last Access" />
+        <mx:Text x="148" y="463" text="{selectedRow.lastAccess}"  width="200"/>
+
+        <mx:Label x="80" y="489" text="Messages" />
+        <mx:TextArea x="148" y="488" width="200" height="64" />
+
+    </mx:Canvas>
+    </mx:HBox>
 </mx:Canvas>
