--- a/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/TransportUnitView.mxml
+++ b/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/TransportUnitView.mxml
@@ -83,25 +83,21 @@
 
     	]]>
 	</mx:Script>
+	<mx:HBox x="10" y="10" verticalAlign="middle" width="95%">
+	    <mx:Label x="10" y="10" text="Transport Units" fontSize="24"/>
+	    <mx:VRule height="10"/>
+	    <mx:Button id="transportUnitCreateBtn" label="New" buttonMode="true" mouseChildren="false" toolTip="Create a new Transport Unit" icon="@Embed(source='/assets/images/TransportUnit--Add.png')" click="showCreateTransportUnitDialog()"/>
+	    <mx:VRule height="10"/>
+	    <mx:Button id="transportUnitDeleteBtn" label="Delete" buttonMode="true" mouseChildren="false" toolTip="Delete an existing Transport Unit" icon="@Embed(source='/assets/images/TransportUnit--Delete.png')" click="deleteTransportUnitDialog()" />
+        <mx:VRule height="10"/>
+	    <mx:Button id="transportUnitDetailsBtn" label="Details" buttonMode="true" mouseChildren="false" toolTip="Show details of an existing Transport Unit" icon="@Embed(source='/assets/images/TransportUnit--Edit.png')" click="showDetails()" />
+        <mx:VRule height="10"/>
+	    <mx:Button id="transportUnitHistoryBtn" label="History" buttonMode="true" mouseChildren="false" toolTip="Show history information about an Transport Unit" icon="@Embed(source='/assets/images/TransportUnit--History.png')" click="deleteTransportUnitDialog()" />
+	</mx:HBox>
+    <mx:HRule x="10" y="43" width="95%"/>
 
-	<mx:VBox x="10" y="10" width="100%" height="100%">
-        <mx:Grid>
-            <mx:GridRow height="100%">
-                <mx:GridItem horizontalAlign="left" verticalAlign="middle">
-                    <mx:Label text="Transport Units" fontWeight="bold" fontStyle="normal" fontSize="14" color="#207C2F"/>
-                </mx:GridItem>
-                <mx:GridItem horizontalAlign="right" verticalAlign="middle">
-                    <mx:Label id="messageLbl"  color="#FB3232" fontSize="12" text="TransportUnits deleted" fontStyle="italic"/>
-                </mx:GridItem>
-            </mx:GridRow>
-        </mx:Grid>
-		<mx:HBox backgroundAlpha="0.5" backgroundColor="#FFFFFF" horizontalGap="8" width="100%">
-			<mx:Button id="transportUnitCreateBtn" label="Create" click="showCreateTransportUnitDialog()"/>
-			<mx:Button id="transportUnitDeleteBtn" label="Delete" click="deleteTransportUnitDialog()"/>
-			<mx:Button id="transportUnitDetailsBtn" label="Details" click="showDetails()"/>
-			<mx:Button id="transportUnitHistoryBtn0" label="History" />
-		</mx:HBox>
-		<mx:DataGrid id="transportUnitsGrid" width="100%" height="607" doubleClickEnabled="true" doubleClick="showDetails()" allowMultipleSelection="true" dataProvider="{modelLocator.allTransportUnits}">
+	<mx:Canvas x="10" y="53" width="100%" height="100%">
+		<mx:DataGrid id="transportUnitsGrid" width="95%" height="95%" doubleClickEnabled="true" doubleClick="showDetails()" allowMultipleSelection="true" dataProvider="{modelLocator.allTransportUnits}" x="0" y="0">
 			<mx:columns>
 				<mx:DataGridColumn headerText="Barcode" dataField="barcode" />
                 <mx:DataGridColumn headerText="Type" dataField="transportUnitType" />
@@ -113,5 +109,5 @@
                 <mx:DataGridColumn headerText="Placed on" dataField="parent.barcode.value" />
 			</mx:columns>
 		</mx:DataGrid>
-	</mx:VBox>
+	</mx:Canvas>
 </mx:Canvas>
